--- a/2.Meilenstein/css/layout.css
+++ b/2.Meilenstein/css/layout.css
@@ -1,20 +1,15 @@
-body{
-	background-color: rgb(153,217,234);
-	text-align:center;
-	font-family:Arial;
-}
+
 /*Bezieht sich auf die Überschrift*/
 #ueberschrift{
 	font-size:22px;
 }
-div {
-	margin: 0px auto;
+.schriftFarbe{
+	color: rgb(63,72,204);
+	font-weight:bold;
+
 }
-/*Betrifft das Grundsätzliche Layout*/
-div.grundlayout{
-	border-color: black;
-	border-width: 1px;
-	text-align:center;
+#bildschrift{
+	font-size:72px;
 }
 /*Betrifft nur das Titelbild. */
 #picture{
@@ -25,13 +20,23 @@ div.grundlayout{
 /*Für den Rahmen für das Titelbild und das Menü*/
 .rahmen{
 	border-color: rgb(63,72,204);
-	border-width: 10px;
+	border-width: 6px;
 	border-style: solid;
 }
 /*Ist für das Menü zuständig*/
 #menu{
 	background-color: rgb(0,162,232);	
-	width:100px;
+	width:128px;
+}
+a:link, a:visited {
+    display: block;
+    font-weight: bold;
+    color: rgb(0,0,0);
+    background-color: rgb(0,162,232);
+    width: 120px;
+    text-align: center;
+    padding: 4px;
+    text-decoration: none;
 }
 a:hover {
     background-color: rgb(63,72,204);
